Color agregar producto

--- a/src/app/home/productos/form-product/form-productos.component.html
+++ b/src/app/home/productos/form-product/form-productos.component.html
@@ -8,13 +8,13 @@
           <div class="col-2"></div>
           <div class="col-9">
             <div class="card spur-card">
-              <div class="card-header rounded-card">
+              <div class="card-header rounded-card" style="background-color: rgba(241, 126, 213, 0.18);">
                 <div class="spur-card-icon">
-                  <i class="fas fa-chart-bar"></i>
+                  <i class="fas fa-chart-bar" style="color: #f17ed5;"></i>
                 </div>
-                <div class="spur-card-title" id="spur-card-title"></div>
+                <div class="spur-card-title" id="spur-card-title" style="color: black"></div>
               </div>
-              <div class="card-body rounded">
+              <div class="card-body rounded" style="border-color: rgba(241, 126, 213, 0.18); border-style: solid;">
                 <form [formGroup]="form">
                   <input formControlName="idProducto" type="hidden" class="form-control">
                   <div class="form-group">
@@ -91,17 +91,17 @@
                     </tr>
                   </tbody>
                 </table><br>
-                <button class="btn btn-primary" (click)="mostrarDetalle(-1)">Agregar</button>
+                <button class="btn btn-primary" (click)="mostrarDetalle(-1)" style="background-color: rgba(241, 126, 213, 0.67) !important; color:#FFFFFF">Agregar</button>
                 <div class="row justify-content-end">
-                  <button (click)="cancelar()" class="col-md-2 btn btn-primary">Cancelar</button>
-                  <button (click)="onSubmit()" id="btn-submit" [disabled]="!this.form.valid" class="col-md-2 btn btn-primary">Terminar</button>
+                  <button (click)="cancelar()" class="col-md-2 btn btn-primary" style="background-color: rgba(241, 126, 213, 0.67) !important; color:#FFFFFF">Cancelar</button>
+                  <button (click)="onSubmit()" id="btn-submit" [disabled]="!this.form.valid" class="col-md-2 btn btn-primary" style="background-color: rgba(241, 126, 213, 0.67) !important; color:#FFFFFF">Terminar</button>
                 </div>
               </div>
 
-              <div id="editDetail-modal" class="modal card-body rounded">
+              <div id="editDetail-modal" class="modal card-body rounded" style="border-color: rgba(241, 126, 213, 0.18); border-style: solid;">
                 <!-- Modal content -->
                 <div class="card-body rounded modal-content">
-                  <div class="card-body rounded">
+                  <div class="card-body rounded" style="border-color: rgba(241, 126, 213, 0.18); border-style: solid;">
                     <div id="first-edit">
                       <div class="form-group-row">
                         <label for="img">Url</label>
@@ -124,9 +124,9 @@
                       </table><br><br>
 
                       <div class="form-group row">
-                        <button (click)="submitDetalle()" id="submit-detalle" class="btn btn-primary">Terminar</button>
-                        <button (click)="ocultarDetalle()" class="btn btn-primary">Cancelar</button>
-                        <button (click)="newTalla(0)" id="new-talla" class="btn btn-primary">Nueva talla</button>
+                        <button (click)="submitDetalle()" id="submit-detalle" class="btn btn-primary" style="background-color: rgba(241, 126, 213, 0.67) !important; color:#FFFFFF">Terminar</button>
+                        <button (click)="ocultarDetalle()" class="btn btn-primary" style="background-color: rgba(241, 126, 213, 0.67) !important; color:#FFFFFF">Cancelar</button>
+                        <button (click)="newTalla(0)" id="new-talla" class="btn btn-primary" style="background-color: rgba(241, 126, 213, 0.67) !important; color:#FFFFFF">Nueva talla</button>
                       </div>
                     </div>
 
@@ -151,10 +151,10 @@
                 </div>
               </div>
 
-              <div id="aggDetail-modal" class="modal card-body rounded">
+              <div id="aggDetail-modal" class="modal card-body rounded" style="border-color: rgba(241, 126, 213, 0.18); border-style: solid;">
                 <!-- Modal content -->
-                <div class="card-body rounded modal-content">
-                  <div class="card-body rounded">
+                <div class="card-body rounded modal-content" style="border-color: rgba(241, 126, 213, 0.18); border-style: solid;">
+                  <div class="card-body rounded" style="border-color: rgba(241, 126, 213, 0.18); border-style: solid;">
                     <div id="first">
                       <input type="hidden" id="id-detalle">
                       <div class="form-group row">
@@ -175,8 +175,8 @@
                         </div>
                       </div>
                       <div class="form-group row">
-                        <button (click)="addTalla(0)" id="new-talla" class="btn btn-primary">Agregar Tallas</button>
-                        <button (click)="ocultarDetalle()" class="btn btn-primary">Cancelar</button>
+                        <button (click)="addTalla(0)" id="new-talla" class="btn btn-primary" style="background-color: rgba(241, 126, 213, 0.67) !important; color:#FFFFFF">Agregar Tallas</button>
+                        <button (click)="ocultarDetalle()" class="btn btn-primary" style="background-color: rgba(241, 126, 213, 0.67) !important; color:#FFFFFF">Cancelar</button>
                       </div>
                     </div>
 
@@ -192,9 +192,9 @@
                         </div>
                       </div>
                       <div class="form-group row">
-                        <button (click)="addTalla(2)" class="btn btn-primary">Terminar</button>
-                        <button (click)="addTalla(1)" id="other-talla" class="btn btn-primary">Agregar Otra</button>
-                        <button (click)="ocultarDetalle()" class="btn btn-primary">Cancelar</button>
+                        <button (click)="addTalla(2)" class="btn btn-primary" style="background-color: rgba(241, 126, 213, 0.67) !important; color:#FFFFFF">Terminar</button>
+                        <button (click)="addTalla(1)" id="other-talla" class="btn btn-primary" style="background-color: rgba(241, 126, 213, 0.67) !important; color:#FFFFFF">Agregar Otra</button>
+                        <button (click)="ocultarDetalle()" class="btn btn-primary" style="background-color: rgba(241, 126, 213, 0.67) !important; color:#FFFFFF">Cancelar</button>
                       </div>
                     </div>
                   </div>
