--- a/src/app/home/productos/table-product/table-product.component.html
+++ b/src/app/home/productos/table-product/table-product.component.html
@@ -7,13 +7,13 @@
         <div class="col-lg-1"></div>
         <div class="col-lg-10">
           <div style="margin: 10px;" class="card spur-card">
-            <div class="card-header">
+            <div class="card-header" style="background-color: rgba(241, 126, 213, 0.18);">
               <div class="spur-card-icon">
-                <i class="fas fa-table"></i>
+                <i class="fas fa-table" style="color: #f17ed5;"></i>
               </div>
-              <div class="spur-card-title">Lista de productos</div>
+              <div class="spur-card-title" style="color: black">Lista de productos</div>
             </div>
-            <div class="card-body ">
+            <div class="card-body" style="border-color: rgba(241, 126, 213, 0.18); border-style: solid;">
               <table class="table table-in-card">
                 <thead>
                   <tr>
@@ -48,7 +48,7 @@
                   </tr>
                 </tbody>
               </table><br>
-              <button (click)="agregar()" class="btn btn-primary">Agregar</button>
+              <button (click)="agregar()" class="btn btn-primary" style="background-color: rgba(241, 126, 213, 0.67) !important; color:#FFFFFF">Agregar</button>
             </div>
           </div>
         </div>
