--- a/src/app/home/productos/form-product/form-productos.component.css
+++ b/src/app/home/productos/form-product/form-productos.component.css
@@ -39,6 +39,6 @@
   width: 22px;
   height: 22px;
   border-color: black;
+  border-width: 1px;
   border-style: solid;
-  background-color: red;
 }
