--- a/src/app/home/footer/footer.component.html
+++ b/src/app/home/footer/footer.component.html
@@ -1,130 +1,40 @@
-<footer class="footer footer-2">
-
-    <div class="footer-newsletter bg-image" style="background-image: url(assets/images/backgrounds/fot.jpg)">
-        <div class="container">
-            <div class="heading text-center">
-                <h3 class="title">«Una mujer con los zapatos correctos puede conquistar el mundo»</h3><!-- End .title -->
-       
-            </div><!-- End .heading -->
-
-            <div class="row">
-                <div class="col-sm-10 offset-sm-1 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
-                </div><!-- End .col-sm-10 offset-sm-1 col-lg-6 offset-lg-3 -->
-            </div><!-- End .row -->
-        </div><!-- End .container -->
-    </div><!-- End .footer-newsletter bg-image -->
-
-
-
-    <div class="footer-middle">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12 col-lg-6" align="center">
-                    <div class="widget widget-about">
-                        <img src="https://github.com/SantiagoAndresSerrano/img-soka/blob/master/sokaSlogo.png?raw=true"
-                            class="footer-logo" alt="Footer Logo" width="205" height="25">
-                        <hr>
-                        <p>Somos fabricantes y proveedores de calzado de mujer construido por los mejores profesionales
-                            del sector , materiales de primera calidad. Comercializamos diseños modernos de plataformas,
-                            sandalias, mocasines y calzado para eventos perfectos para cada ocasión. </p>
-
-                        <div class="widget-about-info">
-                            <div class="row">
-                                <div class="col-sm-6 col-md-4">
-                                    <span class="widget-about-title">¿Tienes alguna pregunta? Llámanos:</span>
-                                    <a href="https://api.whatsapp.com/send?phone=573123330344&text=Hola%20%2C%20No%20hay%20hielo"
-                                        target="_blank">312 333 0344</a>
-                                </div><!-- End .col-sm-6 -->
-
-                                <div class="col-sm-4 col-md-8">
-                                    <div class="footer-bottom">
-                                        <div class="container">
-
-                                            <div class="social-icons">
-
-                                                <span class="social-label">Redes Sociales</span>
-                                                <a href="https://www.facebook.com/soka_shoes1-112321717216812" class="social-icon social-facebook" title="Facebook"
-                                                    target="_blank"><i class="icon-facebook-f"></i></a>
-
-                                                <a href="https://www.instagram.com/soka_shoes1/" class="social-icon social-instagram" title="Instagram"
-                                                    target="_blank"><i class="icon-instagram"></i></a>
-
-                                                <a href="https://api.whatsapp.com/send?phone=573115161135&text=Hola%20%2C%20%20%20"
-                                                    class="social-icon social-youtube" title="Youtube"
-                                                    target="_blank"><i class="fab fa-whatsapp"></i></a>
-
-
-                                            </div><!-- End .soial-icons -->
-                                        </div><!-- End .container -->
-                                    </div><!-- End .footer-bottom -->
-
-                                </div><!-- End .col-sm-6 -->
-                            </div><!-- End .row -->
-                        </div><!-- End .widget-about-info -->
-                    </div><!-- End .widget about-widget -->
-                </div><!-- End .col-sm-12 col-lg-3 -->
-
-
-
-                <div class="col-sm-2 col-lg-2">
-                    <div class="widget">
-                        <h4 class="widget-title"></h4><!-- End .widget-title -->
-                        <hr>
-                        <ul class="widget-list">
-                            <img src="https://www.audleyshoes.com/11635-home_default/cesia.jpg" width="205" height="25">
-                            <hr>
-                            <img src="https://www.audleyshoes.com/6508-large_default/vicky.jpg" width="205" height="25">
-                            <hr>
-
-                        </ul><!-- End .widget-list -->
-
-                    </div><!-- End .widget -->
-                </div><!-- End .col-sm-64 col-lg-3 -->
-
-                <div class="col-sm-1 col-lg-2">
-                    <div class="widget">
-                        <h4 class="widget-title" align="center">INSTAGRAM</h4><!-- End .widget-title -->
-                       
-                        <hr>
-                        <ul class="widget-list">
-                            <img src="https://www.audleyshoes.com/10747-large_default/zapato-de-tacon-medio-balisa.jpg" width="205" height="25">
-                            <hr>
-                            <img src="https://www.audleyshoes.com/11342-large_default/sandalia-de-tacon-medio-deina.jpg" width="205" height="25">
-                            <hr>
-                        </ul><!-- End .widget-list -->
-                    </div><!-- End .widget -->
-                </div><!-- End .col-sm-64 col-lg-3 -->
-              
-                <div class="col-sm-1 col-lg-2">
-                    <div class="widget">
-                        <h4 class="widget-title"></h4><!-- End .widget-title -->
-                        <hr>
-                        <ul class="widget-list">
-                            <img src="https://www.audleyshoes.com/11493-large_default/sandalia-de-tacon-medio-dora.jpg" width="205" height="25">
-                            <hr>
-                            <img src="https://www.audleyshoes.com/11175-large_default/sandalia-de-tacon-medio-dacia.jpg" width="205" height="25">
-                            <hr>
-                        </ul><!-- End .widget-list -->
-                    </div><!-- End .widget -->
-                </div><!-- End .col-sm-64 col-lg-3 -->
-            </div><!-- End .row -->
-        </div><!-- End .container -->
-    </div><!-- End .footer-middle -->
-
-    <div class="footer-bottom">
-        <div class="container">
-            <p class="footer-copyright">Copyright © 2021 SokaShoes </p><!-- End .footer-copyright -->
-            <ul class="footer-menu">
-                <li><a href="#">Terms Of Use</a></li>
-                <li><a href="#">Privacy Policy</a></li>
-            </ul><!-- End .footer-menu -->
-
-            <div class="social-icons social-icons-color">
-                <span class="widget-about-title">Metodos de pago</span>
-                <figure class="footer-payments">
-                    <img src="assets/images/payments.png" alt="Payment methods" width="272" height="20">
-                </figure><!-- End .footer-payments -->
-            </div><!-- End .soial-icons -->
-        </div><!-- End .container -->
-    </div><!-- End .footer-bottom -->
+<footer class=" foot">
+    <div class="backrosa">
+        <div class="center"><div class="card">
+            <div class="card-body">
+                Somos fabricantes y proveedores de calzado de mujer construido por los mejores profesionales del sector , materiales de primera calidad. Comercializamos diseños modernos de plataformas, sandalias, mocasines y calzado para eventos perfectos para cada ocasión.
+            </div>
+          </div>
+        </div>
+        <div class="row redes">
+            <div class="col-6">
+                <div class="row">
+                    <div class="col-2"><a href="/contacto">Contactanos</a> </div>
+                    <div class="col-2"><a href="/productoDelMes">Descubre</a> </div>
+                    <div class="col-2"><a href="/productos">Productos</a> </div>
+                </div>
+                
+            </div>   
+            
+            
+            <div class="col-1"><a href="https://www.facebook.com"><i class="fab fa-facebook-square fa-lg" ></i></a> </div>
+            <div class="col-1"><a href="https://www.instagram.com"><i class="fab fa-instagram fa-lg" ></i></a> </div>
+            <div class="col-1"><a href="https://www.youtube.com/"><i class="fab fa-youtube fa-lg" ></i></a> </div>
+            
+        </div>
+        <hr>
+    </div>
+    
+    
+    <div class="row terms">
+        <div class="col-8 mt-3">
+            <div class="row mt-3">
+                <div class="col-3 mt-4"><p>© 2023  All rights reserved.</p></div> <div class="col-5"></div>
+                <div class="col-3 mt-3"><img src="../../../assets/images/sokaSlogo 1.png" alt=""></div>
+            </div>
+        </div>
+        
+        <div class="col-2">Terms of Service</div>
+        <div class="col-2"> Privacy Policy</div>
+    </div>
 </footer><!-- End .footer -->
